--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "raylib.h": "c"
-    }
+        "raylib.h": "c",
+        "debugger.h": "c"
+    },
+    "C_Cpp.default.cStandard": "c23"
 }
